# regulated-ai-agent-platform

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/assets/: governance-registry-template.xlsx
backend/app/services/: enterprise_api.py  evidence.py  governance_registry.py  infra.py  knowledge.py  obsidian_connector.py  trust_plane.py  workflow.py
backend/demo/obsidian-vault/Controls/: Customer Records Retention Amendment.md  Tool Access Standard.md
backend/demo/obsidian-vault/Policies/: AI Assistant Governance.md
backend/evals/: security_cases.json
backend/migrations/: env.py
backend/migrations/versions/: 48f2772be5c4_initial_governed_platform_schema.py
backend/tests/: test_api.py  test_change_proposals.py  test_knowledge_governance.py  test_policy.py  test_production_security.py  test_security_evals.py  test_security_twin.py  test_trust_plane.py
backend/tests/fixtures/: governance-registry-valid.xlsx
docs/: api-examples.md  enterprise-deployment-roadmap.md  knowledge-governance.md  linkedin-post.md  operations-checklist.md  production-limitations.md  threat-model.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
k8s/: README.md  backend.yaml  configmap.yaml  frontend.yaml  hpa.yaml  migration-job.yaml  namespace.yaml  redis.yaml  secret.yaml
scripts/: build_demo_gif.py
(+21 files in other folders)
